fixed code and added components

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,7 +1,9 @@
 @use './vars' as *;
+@use 'bootstrap/scss/bootstrap';
 
-body {
+#app{
     font-family: $main-font;
+    background-color: rebeccapurple;
 }
 
 .container {
