--- a/src/assets/scss/_vars.scss
+++ b/src/assets/scss/_vars.scss
@@ -1,1 +1,22 @@
 $main-font : Montserrat, sans-serif;
+
+$types: (
+	'bug': #f8d5a3,
+	'electric': #fcf7de,
+	'dark': #044286,
+	'dragon': #97b3e6,
+	'fairy': #fce9ff,
+	'fighting': #e6e0d4,
+	'fire': #fddfdf,
+	'flying': #f5f5f5,
+	'ghost': #663388,
+	'grass': #defde0,
+	'ground': #f4e7da,
+	'ice': #def3fd,
+	'normal': #f5f5f5,
+	'poison': #98d7a5,
+	'psychic': #eaeda1,
+	'rock': #d5d5d4,
+	'steel': gray,
+	'water': #def3fd,
+);
